--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,454 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* https://chatgpt.com/c/89354350-174e-422d-82dc-486405702f1d
+
+look to this link to see how to make scrollbar in each section
+*/
+
+:root {
+    --primary-color-hue: 252;
+    --dark-color-lightness: 17%;
+    --light-color-lightness: 95%;
+    --white-color-lightness: 100%;
+
+    --color-white: hsl(252, 30%, var(--white-color-lightness));
+    --color-light: hsl(252, 30%, var(--light-color-lightness));
+    --color-gray: hsl(var(--primary-color-hue), 15%, 65%);
+    --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
+    --color-secondary: hsl(var(--primary-color-hue), 100%, 90%);
+    --color-success: hsl(120, 95%, 65%);
+    --color-danger: hsl(0, 95%, 65%);
+    --color-dark: hsl(252, 30%, var(--dark-color-lightness));
+    --color-black: hsl(252, 30%, 10%);
+    --border-radius: 2rem;
+    --card-border-radius: 1rem;
+    --btn-padding: 0.6rem 2rem;
+    --search-padding: 0.6rem 1rem;
+    --card-padding: 1rem;
+    --sticky-top-left: 5.4rem;
+    --sticky-top-right: -18rem;
+}
+
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    border: none;
+    scroll-behavior: smooth;
+}
+
+/* body,
+html {
+  height: 100%;
+  overflow: hidden; Prevent body from scrolling
+} */
+
+body {
+    font-family: "Poppins", sans-serif;
+    color: var(--color-dark);
+    background-color: var(--color-light);
+    overflow-x: hidden;
+}
+
+/* general styles */
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.profile-photo {
+    width: 2.7rem;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+img {
+    display: block;
+    width: 100%;
+}
+
+.btn {
+    display: inline-block;
+    padding: var(--btn-padding);
+    font-weight: 500;
+    border-radius: var(--border-radius);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 0.9rem;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+.btn-primary {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+}
+
+.text-bold {
+    font-weight: 500;
+}
+
+.text-muted {
+    color: var(--color-gray);
+}
+
+/* ======================= THEME ======================= */
+
+.customize-theme {
+    background: rgba(255, 255, 255, 0.5);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    text-align: center;
+    display: none;
+    place-items: center;
+}
+
+.customize-theme .card {
+    background: var(--color-white);
+    padding: 2rem;
+    border-radius: var(--card-border-radius);
+    width: 50%;
+    box-shadow: 0 0 1rem var(--color-primary);
+}
+
+.customize-theme .card>div {
+    margin-top: 1rem;
+}
+
+.customize-theme .card>div>h4 {
+    margin-bottom: 0.5rem;
+}
+
+/* ======================= FONT SIZE ======================= */
+
+.customize-theme .font-size>div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: var(--color-light);
+    padding: var(--search-padding);
+    border-radius: var(--border-radius);
+}
+
+.customize-theme .choose-size {
+    background: var(--color-secondary);
+    height: 0.3rem;
+    width: 100%;
+    margin: 0 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.customize-theme .choose-size span {
+    width: 1rem;
+    height: 1rem;
+    background: var(--color-secondary);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.customize-theme .choose-size span.active {
+    border-radius: var(--border-radius);
+    background: var(--color-primary);
+    color: var(--color-white);
+}
+
+.customize-theme .choose-size span:hover {
+    background: var(--color-primary);
+    color: var(--color-white);
+}
+
+/*======== color ==========*/
+.customize-theme .choose-color {
+    background: var(--color-light);
+    padding: var(--search-padding);
+    border-radius: var(--border-radius);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.customize-theme .choose-color span {
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.customize-theme .choose-color span:nth-child(1) {
+    background: hsl(252, 75%, 60%);
+}
+
+.customize-theme .choose-color span:nth-child(2) {
+    background: hsl(52, 75%, 60%);
+}
+
+.customize-theme .choose-color span:nth-child(3) {
+    background: hsl(352, 75%, 60%);
+}
+
+.customize-theme .choose-color span:nth-child(4) {
+    background: hsl(152, 75%, 60%);
+}
+
+.customize-theme .choose-color span:nth-child(5) {
+    background: hsl(202, 75%, 60%);
+}
+
+.customize-theme .choose-color span.active {
+    border: 5px solid white;
+}
+
+/*======== background ==========*/
+
+/* .customize-theme .background {
+  margin-top: 2rem;
+} */
+
+.customize-theme .choose-bg {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.customize-theme .choose-bg>div {
+    padding: var(--card-padding);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 0.4rem;
+    cursor: pointer;
+}
+
+.customize-theme .choose-bg>div.active {
+    border: 2px solid var(--color-primary);
+}
+
+.customize-theme .choose-bg .bg-1 {
+    background: white;
+    color: black;
+}
+
+.customize-theme .choose-bg .bg-2 {
+    background: hsl(252, 30%, 17%);
+    color: white;
+}
+
+.customize-theme .choose-bg .bg-3 {
+    background: hsl(252, 30%, 10%);
+    color: white;
+}
+
+.customize-theme .choose-bg>div span {
+    width: 2rem;
+    height: 2rem;
+    border: 2px solid var(--color-gray);
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+/* MEDIA QUERIES For Small Laptops and Big Tablets */
+
+@media screen and (max-width: 1200px) {
+    main .container {
+        grid-template-columns: 5rem auto 31vw;
+        gap: 0;
+        width: 90%;
+    }
+
+    main .container .left .sidebar {
+        margin-top: 0;
+    }
+
+    main .container .left .notifications-popup {
+        /* position: absolute; */
+        left: 125%;
+        /* width: 25rem; */
+    }
+
+    main .container .left #notifications::after {
+        right: -2rem;
+    }
+
+    .left {
+        width: 5rem;
+        z-index: 5;
+    }
+
+    main .container .left .profile {
+        display: none;
+    }
+
+    .sidebar h3 {
+        display: none;
+    }
+
+    .left .btn {
+        display: none;
+    }
+
+    .customize-theme .card {
+        width: 80vw;
+    }
+}
+
+/* MEDIA QUERIES For Small Tablets And Mobile phones */
+
+@media screen and (max-width: 992px) {
+    nav .search-bar {
+        display: none;
+    }
+
+    main .container {
+        grid-template-columns: 0 auto 3rem;
+    }
+
+    main .container .left {
+        grid-column: 3/4;
+        position: fixed;
+        bottom: 0;
+        right: 0;
+    }
+
+    main .container .left .notifications-popup {
+        position: absolute;
+        left: -26rem;
+        width: 25rem;
+    }
+
+    main .container .left .notifications-popup::before {
+        display: absolute;
+        top: 1.3rem;
+        left: calc(20rem - 0.6rem);
+        transform: rotate(90deg);
+    }
+
+    main .container .middle {
+        grid-column: 1/3;
+    }
+
+    main .container .right {
+        display: none;
+    }
+
+    .customize-theme .card {
+        width: 80vw;
+    }
+}
+
+/* ========= MEDIA QUERIES FOR MOBILE PHONES ========= */
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: 90%;
+    }
+
+    main .container {
+        grid-template-columns: 0 100% 0;
+    }
+
+    main .container .middle {
+        padding: 0;
+    }
+
+    main .middle .stories {
+        margin-top: 1rem;
+    }
+
+    main .container .left {
+        right: -4.5rem;
+        transition: all 0.3s ease;
+    }
+
+    main .container .left:hover {
+        right: 0;
+    }
+
+    main .container .left .notifications-popup {
+        position: absolute;
+        left: -18.5rem;
+        width: 18rem;
+    }
+
+    main .container .left .notifications-popup .profile-photo {
+        width: 25%;
+        height: 25%;
+    }
+
+    .customize-theme .card {
+        width: 90vw;
+    }
+
+    .customize-theme .choose-bg {
+        flex-direction: column;
+    }
+
+    /* .middle .feed .photo {
+    height: 100%;
+  } */
+}
+
+/* Scrollbar for webkit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+    width: 8px;
+    /* Width of the scrollbar */
+    height: 8px;
+    /* Height of the scrollbar (for horizontal scrollbar) */
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    /* Color of the scrollbar thumb */
+    border-radius: 6px;
+    /* Roundness of the scrollbar thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    /* Color when hovering over the scrollbar thumb */
+}
+
+/*
+::-webkit-scrollbar-track {
+  background: #f1f1f1;  Color of the scrollbar track 
+  border-radius: 6px;  Roundness of the scrollbar track
+  border: 1px solid #ccc; Border around the scrollbar track 
+}
+*/
+
+.scrollable {
+    overflow: auto;
+}
+
+.scrollable::-webkit-scrollbar-thumb {
+    background: transparent;
+    /* Color of the scrollbar thumb */
+    border-radius: 6px;
+    /* Roundness of the scrollbar thumb */
+}
+
+.scrollable:hover:-webkit-scrollbar-thumb {
+    background: #888;
+    /* Color when hovering over the scrollbar thumb */
+}
+
+.scrollable:hover::-webkit-scrollbar-thumb {
+    background: #888;
+    /* Color when hovering over the .scrollable div */
+}
