--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -105,7 +105,7 @@
     <span><i class="uil uil-chart-line"></i></span>
     <h3>Analytics</h3>
   </a>
-  <a class="menu-item" id="theme">
+  <a class="menu-item" id="theme" (click)="themeService.open()">
     <span><i class="uil uil-palette"></i></span>
     <h3>Theme</h3>
   </a>
