--- a/src/app/components/theme/theme.component.html
+++ b/src/app/components/theme/theme.component.html
@@ -1,8 +1,5 @@
-<div
-  class="customize-theme"
-  [style.display]="themeService.isOpened ? 'grid' : 'none'"
-  (click)="themeService.close()"
->
+<div class="customize-theme" (click)="themeService.close()">
+  <!-- [style.display]="themeService.isOpened ? 'grid' : 'none'" -->
   <div class="card">
     <h2>customize your view</h2>
     <p class="text-muted">Manage your font size, color, and background</p>
@@ -13,11 +10,12 @@
       <div>
         <h6>Aa</h6>
         <div class="choose-size">
-          <span class="font-size-1"></span>
-          <span class="font-size-2"></span>
-          <span class="font-size-3 active"></span>
-          <span class="font-size-4"></span>
-          <!-- <span class="font-size-5"></span> -->
+          <span
+            *ngFor="let size of themeService.fontsSizes"
+            class="font-size-{{ size }}"
+            [class.active]="themeService.selectedFontSize === size"
+            (click)="themeService.changeFontSize(size)"
+          ></span>
         </div>
         <h3>Aa</h3>
       </div>
@@ -25,11 +23,13 @@
     <div class="color">
       <h4>color</h4>
       <div class="choose-color">
-        <span class="color-1 active"></span>
-        <span class="color-2"></span>
-        <span class="color-3"></span>
-        <span class="color-4"></span>
-        <span class="color-5"></span>
+        <span
+          *ngFor="let color of themeService.colors"
+          class="color-{{ color.name }}"
+          [class.active]="themeService.selectedColor === color.value"
+          (click)="themeService.changeColor(color.value)"
+          [style.background]="'hsl(' + color.value + ', 75%, 60%)'"
+        ></span>
       </div>
     </div>
     <div class="background">
