--- a/src/app/components/theme/theme.component.css
+++ b/src/app/components/theme/theme.component.css
@@ -18,6 +18,7 @@
     border-radius: var(--card-border-radius);
     width: 50%;
     box-shadow: 0 0 1rem var(--color-primary);
+    position: relative;
 }
 
 .customize-theme .card>div {
@@ -68,6 +69,10 @@
     color: var(--color-white);
 }
 
+.customize-theme .choose-color span.active {
+    border: 5px solid white;
+}
+
 /*======== color ==========*/
 .customize-theme .choose-color {
     background: var(--color-light);
@@ -98,7 +103,7 @@
     gap: 1rem;
 }
 
-.customize-theme .choose-bg>div {
+.customize-theme .choose-bg > div {
     padding: var(--card-padding);
     width: 100%;
     display: flex;
@@ -113,25 +118,31 @@
     border: 2px solid var(--color-primary);
 }
 
-.customize-theme .choose-bg .bg-1 {
-    background: white;
+.customize-theme .choose-bg {
     color: black;
 }
 
 .customize-theme .choose-bg .bg-2 {
-    background: hsl(252, 30%, 17%);
     color: white;
 }
 
 .customize-theme .choose-bg .bg-3 {
-    background: hsl(252, 30%, 10%);
     color: white;
 }
 
-.customize-theme .choose-bg>div span {
+.customize-theme .choose-bg > div span {
     width: 2rem;
     height: 2rem;
     border: 2px solid var(--color-gray);
     border-radius: 50%;
     margin-right: 1rem;
+}
+
+.close-icon{
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    font-size: 1.5rem;
+    color: var(--color-dark);
+    cursor: pointer;
 }
