--- a/src/app/components/home/story/story.component.html
+++ b/src/app/components/home/story/story.component.html
@@ -1,9 +1,4 @@
-<div
-  class="story"
-  [style.background]="
-    'url(' + story.profilePhoto + ') no-repeat center center/cover'
-  "
->
+<div class="story" [style.background]="background">
   <div class="profile-photo">
     <img [src]="story.image" alt="profile image" />
   </div>
