--- a/src/app/components/message-sidebar/message-sidebar.component.css
+++ b/src/app/components/message-sidebar/message-sidebar.component.css
@@ -1,33 +1,34 @@
-.messages {
+:host {
+    display: block;
     background: var(--color-white);
     border-radius: var(--card-border-radius);
     padding: var(--card-padding);
     transition: all 0.3s ease;
 }
 
-.messages .heading {
+.heading {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 1rem;
 }
 
-.messages i {
+i {
     font-size: 1.4rem;
 }
 
-.messages .search-bar {
+.search-bar {
     display: flex;
     margin-bottom: 1rem;
 }
 
-.messages .category {
+.category {
     display: flex;
     justify-content: space-between;
     margin-bottom: 1rem;
 }
 
-.messages .category h6 {
+.category h6 {
     width: 100%;
     text-align: center;
     border-bottom: 4px solid var(--color-light);
@@ -36,6 +37,6 @@
     cursor: pointer;
 }
 
-.messages .category .active {
+.category .active {
     border-color: var(--color-dark);
 }
