create button component and refactor code to use it

--- a/src/app/components/friends-requests-list/friend-request/friend-request.component.html
+++ b/src/app/components/friends-requests-list/friend-request/friend-request.component.html
@@ -9,8 +9,7 @@
     </div>
   </div>
   <div class="action">
-    <button class="btn btn-primary">Accept</button>
-    <button class="btn">Decline</button>
+    <app-button id="accept-btn" label="Accept" />
+    <app-button id="decline-btn" label="Decline" />
   </div>
 </div>
-
