--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -114,4 +114,5 @@
     <h3>Settings</h3>
   </a>
 </div>
-<label for="create-post" class="btn btn-primary">Create Post</label>
+
+<app-button id="create-post-btn" label="Create Post" for="create-post" />
