--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -7,7 +7,7 @@
       <input type="search" placeholder="Search for creators or posts ..." />
     </div>
     <div class="create">
-      <label class="btn btn-primary" for="create-post">Create</label>
+      <app-button id="create-post-btn" label="Create" for="create-post" />
       <div class="profile-photo">
         <img src="./assets/images/profile-1.jpg" alt="profile image" />
       </div>
