--- a/src/app/components/friends-requests-list/friend-request/friend-request.component.css
+++ b/src/app/components/friends-requests-list/friend-request/friend-request.component.css
@@ -18,6 +18,11 @@
     flex-wrap: wrap;
 }
 
+#decline-btn {
+  background: #f0f0f0;
+  color: var(--color-black);
+}
+
 /* .request .action .btn {
   width: max-content;
   padding: 0.3rem 1rem;
