--- a/src/app/components/home/post/post.component.html
+++ b/src/app/components/home/post/post.component.html
@@ -28,6 +28,7 @@
   </div>
 </div>
 <div class="liked-by">
+  <span *ngFor="let like of post.likes"><img [src]="like.photo" alt="" /></span>
   <p>
     Liked by <b>{{ post.likes[0].username }}</b> and
     <b>{{ post.likes.length - 1 }} others</b>
