--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,15 +1,3 @@
-/* left section */
-
-.profile {
-    padding: var(--card-padding);
-    background: var(--color-white);
-    border-radius: var(--card-border-radius);
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    width: 100%;
-}
-
 /* sidebar */
 
 .sidebar {
@@ -18,67 +6,12 @@
     border-radius: var(--card-border-radius);
 }
 
-.sidebar .menu-item {
-    display: flex;
-    align-items: center;
-    height: 3.5rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    position: relative;
-}
-
-.sidebar .menu-item:hover {
-    background: var(--color-light);
-}
-
-.sidebar i {
-    font-size: 1.4rem;
-    color: var(--color-gray);
-    margin-left: 1.5rem;
-    position: relative;
-}
-
-.sidebar i .notifications-count {
-    background-color: var(--color-danger);
-    color: var(--color-white);
-    font-size: 0.7rem;
-    width: fit-content;
-    border-radius: 0.8rem;
-    padding: 0.1rem 0.4rem;
-    position: absolute;
-    top: -0.2rem;
-    right: -0.1rem;
-}
-
-.sidebar h3 {
-    margin-left: 1.5rem;
-    font-size: 1rem;
-}
-
-.sidebar .active {
-    background: var(--color-light);
-}
-
-.sidebar .active i,
-.sidebar .active h3 {
-    color: var(--color-primary);
-}
-
-.sidebar .active::before {
-    content: "";
-    display: block;
-    width: 0.5rem;
-    height: 100%;
-    position: absolute;
-    background: var(--color-primary);
-}
-
-.sidebar .menu-item:first-child.active {
+.sidebar a[appMenuItem]:first-child.active {
     border-top-left-radius: var(--card-border-radius);
     overflow: hidden;
 }
 
-.sidebar .menu-item:last-child.active {
+.sidebar a[appMenuItem]:last-child.active {
     border-bottom-left-radius: var(--card-border-radius);
     overflow: hidden;
 }
@@ -88,25 +21,6 @@
     width: 100%;
     text-align: center;
     padding: 1rem 0;
-}
-
-/* notifications popup */
-
-.notifications-popup {
-    position: absolute;
-    top: 0;
-    left: 110%;
-    width: 28rem;
-    background: var(--color-white);
-    border-radius: var(--card-border-radius);
-    padding: var(--card-padding);
-    /* box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60% 25%); */
-    box-shadow: 0 0 0.5rem var(--color-primary);
-    z-index: 8;
-    visibility: hidden;
-    height: 20rem;
-    overflow-y: scroll;
-    transition: visibility 0s, opacity 0.3s linear;
 }
 
 #notifications::after {
@@ -120,24 +34,4 @@
     transform: rotate(45deg);
     border-radius: 0.1rem;
     display: none;
-}
-
-.notifications-popup>div {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 1rem;
-}
-
-.notifications-popup small {
-    display: block;
-}
-
-.notifications-popup .profile-photo {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 0.15rem solid var(--color-primary);
-    object-fit: cover;
 }
