--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,118 +1,35 @@
-<a class="profile">
-  <div class="profile-photo">
-    <img src="./assets/images/profile-1.jpg" alt="profile image" />
-  </div>
-  <div class="handle">
-    <h4>John Doe</h4>
-    <p class="text-muted">{{ "@" }}johndoe</p>
-  </div>
-  <!-- <div class="follow">
-              <span>1,2k</span>
-              <span>Followers</span>
-            </div>
-            <div class="follow">
-              <span>200</span>
-              <span>Posts</span>
-            </div> -->
-</a>
+<app-profile-card />
 <div class="sidebar">
-  <a class="menu-item active">
-    <span><i class="uil uil-home"></i></span>
-    <h3>Home</h3>
+  <a appMenuItem icon="uil uil-home" [active]="false"> Home </a>
+  <a appMenuItem icon="uil uil-compass" [active]="true"> Explore </a>
+  <a
+    id="notifications"
+    appMenuItem
+    icon="uil uil-bell"
+    [notificationCount]="15"
+  >
+    Notifications
+    <app-notifications-popup notifications />
   </a>
-  <a class="menu-item">
-    <span><i class="uil uil-compass"></i></span>
-    <h3>Explore</h3>
+  <a
+    id="messages-notification"
+    appMenuItem
+    icon="uil uil-envelope"
+    [notificationCount]="6"
+  >
+    Messages
   </a>
-  <a class="menu-item" id="notifications">
-    <span
-      ><i class="uil uil-bell">
-        <small class="notifications-count">9+</small></i
-      ></span
-    >
-    <h3>Notifications</h3>
-    <!-- NOTIFICATIONS POPUP -->
-    <div class="notifications-popup scrollable">
-      <div>
-        <div class="profile-photo">
-          <img src="./assets/images/profile-2.jpg" alt="profile image" />
-        </div>
-        <div class="notification-body">
-          <b>john doe</b> accepted your friend request
-          <small class="text-muted">2 DAYS AGO</small>
-        </div>
-      </div>
-      <div>
-        <div class="profile-photo">
-          <img src="./assets/images/profile-3.jpg" alt="profile image" />
-        </div>
-        <div class="notification-body">
-          <b>john doe</b> accepted your friend request
-          <small class="text-muted">1 HOUR AGO</small>
-        </div>
-      </div>
-      <div>
-        <div class="profile-photo">
-          <img src="./assets/images/profile-4.jpg" alt="profile image" />
-        </div>
-        <div class="notification-body">
-          <b>john doe</b> accepted your friend request
-          <small class="text-muted">4 MINUTES AGO</small>
-        </div>
-      </div>
-      <div>
-        <div class="profile-photo">
-          <img src="./assets/images/profile-5.jpg" alt="profile image" />
-        </div>
-        <div class="notification-body">
-          <b>john doe</b> accepted your friend request
-          <small class="text-muted">1 HOUR AGO</small>
-        </div>
-      </div>
-      <div>
-        <div class="profile-photo">
-          <img src="./assets/images/profile-6.jpg" alt="profile image" />
-        </div>
-        <div class="notification-body">
-          <b>john doe</b> accepted your friend request
-          <small class="text-muted">1 HOUR AGO</small>
-        </div>
-      </div>
-      <div>
-        <div class="profile-photo">
-          <img src="./assets/images/profile-7.jpg" alt="profile image" />
-        </div>
-        <div class="notification-body">
-          <b>john doe</b> accepted your friend request
-          <small class="text-muted">1 HOUR AGO</small>
-        </div>
-      </div>
-    </div>
+  <a appMenuItem icon="uil uil-bookmark"> Bookmarks </a>
+  <a appMenuItem icon="uil uil-chart-line"> Analytics </a>
+  <a
+    id="theme"
+    appMenuItem
+    icon="uil uil-palette"
+    (click)="themeService.open()"
+  >
+    Theme
   </a>
-  <a class="menu-item" id="messages-notification">
-    <span
-      ><i class="uil uil-envelope"
-        ><small class="notifications-count">6</small></i
-      ></span
-    >
-    <h3>Messages</h3>
-  </a>
-  <a class="menu-item">
-    <span><i class="uil uil-bookmark"></i></span>
-    <h3>Bookmarks</h3>
-  </a>
-  <a class="menu-item">
-    <span><i class="uil uil-chart-line"></i></span>
-    <h3>Analytics</h3>
-  </a>
-  <a class="menu-item" id="theme" (click)="themeService.open()">
-    <span><i class="uil uil-palette"></i></span>
-    <h3>Theme</h3>
-  </a>
-  <a class="menu-item">
-    <span><i class="uil uil-setting"></i></span>
-    <h3>Settings</h3>
-  </a>
+  <a appMenuItem icon="uil uil-setting"> Settings </a>
 </div>
 
 <app-button id="create-post-btn" label="Create Post" for="create-post" />
