enable search bar in message side bar

--- a/src/app/components/message-sidebar/message-sidebar.component.html
+++ b/src/app/components/message-sidebar/message-sidebar.component.html
@@ -5,7 +5,13 @@
 <!-- search bar -->
 <div class="search-bar">
   <i class="uil uil-search"></i>
-  <input type="search" placeholder="Search messages..." id="message-search" />
+  <input
+    type="search"
+    placeholder="Search messages..."
+    id="message-search"
+    [(ngModel)]="searchValue"
+    (input)="OnSearch()"
+  />
 </div>
 
 <!-- category -->
