convert project from module to work with stand alone components and remove routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
     <!-- Middle Section -->
     <div class="middle">
-      <router-outlet />
+      <app-home />
     </div>
     <!-- End od Middle Section -->
 
