active on click menu items and hide notification popups

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,7 @@
     <!-- End of Left Section -->
 
     <!-- Middle Section -->
-    <div class="middle">
-      <app-home />
-    </div>
+    <app-home class="middle" />
     <!-- End od Middle Section -->
 
     <!-- Right Section -->
