highlight Messages Sidebar

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -17,6 +17,7 @@
     appMenuItem
     icon="uil uil-envelope"
     [notificationCount]="6"
+    (click)="OnMessagesClicked()"
   >
     Messages
   </a>
