accept friends requests

--- a/src/app/components/friends-requests-list/friend-request/friend-request.component.html
+++ b/src/app/components/friends-requests-list/friend-request/friend-request.component.html
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="action">
-    <app-button id="accept-btn" label="Accept" />
+    <app-button id="accept-btn" label="Accept" (click)="onAccept()" />
     <app-button id="decline-btn" label="Decline" />
   </div>
 </div>
