--- a/src/app/components/friends-requests-list/friends-requests-list.component.html
+++ b/src/app/components/friends-requests-list/friends-requests-list.component.html
@@ -1,6 +1,8 @@
-<div class="friend-requests">
-  <h4>Requests</h4>
-  <ng-container *ngFor="let friendRequest of friendRequests$ | async">
-    <app-friend-request [request]="friendRequest"></app-friend-request>
-  </ng-container>
-</div>
+<ng-container *ngIf="friendRequests$ | async as friendRequests">
+  <div class="friend-requests" [hidden]="allRequestsAccepted(friendRequests)">
+    <h4>Requests</h4>
+    <ng-container *ngFor="let friendRequest of friendRequests">
+      <app-friend-request [request]="friendRequest"></app-friend-request>
+    </ng-container>
+  </div>
+</ng-container>
