--- a/src/app/components/message-sidebar/message-sidebar.component.css
+++ b/src/app/components/message-sidebar/message-sidebar.component.css
@@ -13,19 +13,27 @@
     margin-bottom: 1rem;
 }
 
-i {
-    font-size: 1.4rem;
+.search-bar {
+    background: var(--color-light);
+    border-radius: var(--border-radius);
+    padding: var(--search-padding);
 }
 
-.search-bar {
-    display: flex;
-    margin-bottom: 1rem;
+.search-bar input[type="search"] {
+    background: transparent;
+    margin-left: 1rem;
+    /* font-size: 0.9rem; */
+    color: var(--color-dark);
+}
+
+.search-bar input[type="search"]::placeholder {
+    color: var(--color-gray);
 }
 
 .category {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 1rem;
+    margin: .9rem 0;
 }
 
 .category h6 {
