--- a/src/app/components/sidebar/notifications-popup/notifications-popup.component.css
+++ b/src/app/components/sidebar/notifications-popup/notifications-popup.component.css
@@ -1,42 +1,69 @@
 /* notifications popup */
 :host {
-    position: absolute;
-    top: 0;
-    left: 110%;
-    width: 28rem;
-    background: var(--color-white);
-    border-radius: var(--card-border-radius);
-    padding: var(--card-padding);
-    /* box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60% 25%); */
-    box-shadow: 0 0 0.5rem var(--color-primary);
-    z-index: 8;
-    /* visibility: hidden; */
-    height: 20rem;
-    overflow-y: scroll;
-    transition: visibility 0s, opacity 0.3s linear;
+  position: absolute;
+  top: 0;
+  left: 110%;
+  width: 28rem;
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  /* box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60% 25%); */
+  box-shadow: 0 0 0.5rem var(--color-primary);
+  z-index: 8;
+  /* visibility: hidden; */
+  height: 20rem;
+  overflow-y: scroll;
+  transition: visibility 0s, opacity 0.3s linear;
 }
 
 .notification {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .notification-body {
-    color: var(--color-dark);
+  color: var(--color-dark);
 }
 
 .profile-photo {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 0.15rem solid var(--color-primary);
-    object-fit: cover;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 0.15rem solid var(--color-primary);
+  object-fit: cover;
 }
 
 small {
-    display: block;
+  display: block;
 }
 
+@media screen and (max-width: 992px) {
+  :host {
+    position: absolute;
+    left: -26rem;
+    width: 25rem;
+
+    &::before {
+      display: absolute;
+      top: 1.3rem;
+      left: calc(20rem - 0.6rem);
+      transform: rotate(90deg);
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  :host {
+    position: absolute;
+    left: -18.5rem;
+    width: 18rem;
+
+    .profile-photo {
+      width: 25%;
+      height: 25%;
+    }
+  }
+}
