--- a/src/app/components/sidebar/profile-card/profile-card.component.css
+++ b/src/app/components/sidebar/profile-card/profile-card.component.css
@@ -1,9 +1,14 @@
 :host {
-    padding: var(--card-padding);
-    background: var(--color-white);
-    border-radius: var(--card-border-radius);
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    width: 100%;
+  padding: var(--card-padding);
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  width: 100%;
+}
+@media screen and (max-width: 1200px) {
+  :host {
+    display: none;
+  }
 }
