--- a/src/app/components/theme/theme.component.css
+++ b/src/app/components/theme/theme.component.css
@@ -1,46 +1,45 @@
 /* ======================= THEME ======================= */
 .customize-theme {
-    background: rgba(255, 255, 255, 0.5);
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    text-align: center;
-    display: grid;
-    place-items: center;
-}
+  background: rgba(255, 255, 255, 0.5);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  text-align: center;
+  display: grid;
+  place-items: center;
 
-.customize-theme .card {
+  .card {
     background: var(--color-white);
     padding: 2rem;
     border-radius: var(--card-border-radius);
     width: 50%;
     box-shadow: 0 0 1rem var(--color-primary);
     position: relative;
-}
 
-.customize-theme .card>div {
-    margin-top: 1rem;
-}
+    > div {
+      margin-top: 1rem;
+    }
 
-.customize-theme .card>div>h4 {
-    margin-bottom: 0.5rem;
-}
+    > div > h4 {
+      margin-bottom: 0.5rem;
+    }
 
-/* ======================= FONT SIZE ======================= */
+    .font-size > div {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: var(--color-light);
+      padding: var(--search-padding);
+      border-radius: var(--border-radius);
+    }
+  }
 
-.customize-theme .font-size>div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: var(--color-light);
-    padding: var(--search-padding);
-    border-radius: var(--border-radius);
-}
+  /* ======================= FONT SIZE ======================= */
 
-.customize-theme .choose-size {
+  .choose-size {
     background: var(--color-secondary);
     height: 0.3rem;
     width: 100%;
@@ -48,101 +47,118 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
 
-.customize-theme .choose-size span {
-    width: 1rem;
-    height: 1rem;
-    background: var(--color-secondary);
-    border-radius: 50%;
-    cursor: pointer;
-}
+    span {
+      width: 1rem;
+      height: 1rem;
+      background: var(--color-secondary);
+      border-radius: 50%;
+      cursor: pointer;
 
-.customize-theme .choose-size span.active {
-    border-radius: var(--border-radius);
-    background: var(--color-primary);
-    color: var(--color-white);
-}
+      &.active {
+        border-radius: var(--border-radius);
+        background: var(--color-primary);
+        color: var(--color-white);
+      }
 
-.customize-theme .choose-size span:hover {
-    background: var(--color-primary);
-    color: var(--color-white);
-}
+      &:hover {
+        background: var(--color-primary);
+        color: var(--color-white);
+      }
+    }
+  }
 
-.customize-theme .choose-color span.active {
-    border: 5px solid white;
-}
+  /*======== color ==========*/
 
-/*======== color ==========*/
-.customize-theme .choose-color {
+  .choose-color {
     background: var(--color-light);
     padding: var(--search-padding);
     border-radius: var(--border-radius);
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
 
-.customize-theme .choose-color span {
-    width: 2.2rem;
-    height: 2.2rem;
-    border-radius: 50%;
-    cursor: pointer;
-}
+    span {
+      width: 2.2rem;
+      height: 2.2rem;
+      border-radius: 50%;
+      cursor: pointer;
+      &.active {
+        border: 5px solid white;
+      }
+    }
+  }
 
-/*======== background ==========*/
-
-/* .customize-theme .background {
-  margin-top: 2rem;
-} */
-
-.customize-theme .choose-bg {
+  .choose-bg {
+    color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
-}
 
-.customize-theme .choose-bg > div {
-    padding: var(--card-padding);
-    width: 100%;
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: bold;
-    border-radius: 0.4rem;
-    cursor: pointer;
-}
+    > div {
+      padding: var(--card-padding);
+      width: 100%;
+      display: flex;
+      align-items: center;
+      font-size: 1rem;
+      font-weight: bold;
+      border-radius: 0.4rem;
+      cursor: pointer;
 
-.customize-theme .choose-bg>div.active {
-    border: 2px solid var(--color-primary);
-}
+      &.active {
+        border: 2px solid var(--color-primary);
+      }
+    }
 
-.customize-theme .choose-bg {
-    color: black;
-}
+    .bg-1 {
+      color: black;
+    }
 
-.customize-theme .choose-bg .bg-2 {
-    color: white;
-}
+    > div span {
+      width: 2rem;
+      height: 2rem;
+      border: 2px solid var(--color-gray);
+      border-radius: 50%;
+      margin-right: 1rem;
+    }
+  }
 
-.customize-theme .choose-bg .bg-3 {
-    color: white;
-}
+  /*======== background ==========*/
 
-.customize-theme .choose-bg > div span {
-    width: 2rem;
-    height: 2rem;
-    border: 2px solid var(--color-gray);
-    border-radius: 50%;
-    margin-right: 1rem;
-}
-
-.close-icon{
+  .close-icon {
     position: absolute;
     top: 1rem;
     right: 1.5rem;
     font-size: 1.5rem;
     color: var(--color-dark);
     cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .customize-theme {
+    .card {
+      width: 80vw;
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .customize-theme {
+    .card {
+      width: 90vw;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .customize-theme {
+    .choose-bg {
+      flex-direction: column;
+    }
+    .card {
+      width: 90vw;
+    }
+  }
 }
