--- a/src/app/modules/shared/components/header/header.component.css
+++ b/src/app/modules/shared/components/header/header.component.css
@@ -1,40 +1,47 @@
 /* navbar */
-nav {
-    width: 100%;
-    background-color: var(--color-white);
-    position: fixed;
-    top: 0;
-    z-index: 10;
-    padding: 0.7rem 0;
+:host {
+  width: 100%;
+  background-color: var(--color-white);
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  padding: 0.7rem 0;
+  display: block;
 }
 
-nav .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 95%;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 95%;
 }
 
 .search-bar {
-    background: var(--color-light);
-    border-radius: var(--border-radius);
-    padding: var(--search-padding);
+  background: var(--color-light);
+  border-radius: var(--border-radius);
+  padding: var(--search-padding);
 }
 
 .search-bar input[type="search"] {
-    background: transparent;
-    width: 30vw;
-    margin-left: 1rem;
-    font-size: 0.9rem;
-    color: var(--color-dark);
+  background: transparent;
+  width: 30vw;
+  margin-left: 1rem;
+  font-size: 0.9rem;
+  color: var(--color-dark);
 }
 
-nav .search-bar input[type="search"]::placeholder {
-    color: var(--color-gray);
+.search-bar input[type="search"]::placeholder {
+  color: var(--color-gray);
 }
 
-nav .create {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
+.create {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+@media screen and (max-width: 992px) {
+  .search-bar {
+    display: none;
+  }
 }
