--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,6 +25,6 @@
 <!-- feeds -->
 <div class="feeds">
   <ng-container *ngFor="let post of posts$ | async">
-    <app-post [post]="post"></app-post>
+    <app-post [post]="post"/>
   </ng-container>
 </div>
